Changing Welcome message

--- a/demo/src/app/demo/demo.component.html
+++ b/demo/src/app/demo/demo.component.html
@@ -14,7 +14,7 @@
   </div>
   <div *ngIf="user" class="card text-center">
     <h6 class="card-header">
-      Welcome to Be Beautiful. Let's Shop !!!
+      Welcome to One Click. Let's Shop !!!
     </h6>
     <div class="card-block"></div>
     <img class="card-img-top img-responsive photo" src="{{ user.photoUrl }}">
