--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,16 +1,3 @@
-<!-- <nav class="navbar navbar-toggleable-md navbar-light bg-faded fixed-top">
-  <div class="container">
-    <div class=" page-scroll">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a  href="#intro">One Click</a>
-       </div>
-  </div>
-</nav> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,10 +7,31 @@
   <title>One Click Header</title>
 </head>
 <body>
-  <div>
-    <p>------------------------------------</p>
-    <h2>One Click</h2>
-    <p>------------------------------------</p>
-  </div>
+
+    <nav>
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo">   OneClick</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">         
+            <li><a href="/logout">Logout</a></li>
+          </ul>
+        </div>
+      </nav> 
+    
 </body>
 </html>
+
+
+
+
+   <!-- <nav class="navbar navbar-toggleable-md navbar-light bg-faded navbar-default navbar-static-top"  style="background-color: #e3f2fd;">
+        <div class="container">
+          <div class="navbar-header page-scroll">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand .text-light" href="#intro">OneClick</a>
+          </div>
+          <a href="/logout">Logout</a>
+        </div>
+      </nav>     -->
