--- a/client/src/app/shop-details/shop-details.component.css
+++ b/client/src/app/shop-details/shop-details.component.css
@@ -1,4 +1,4 @@
-.container{
+/* .container{
     margin : 10px;
     padding : 10px;
     display: block;
@@ -20,4 +20,4 @@ div{
 
 p{
     display: inline-block;
-}
+} */
