--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
-<app-navbar></app-navbar>
-
-
-<div class="details">
+<div >
+  <app-navbar></app-navbar>
+</div>
+<div class="background">
     <router-outlet></router-outlet>
 </div>
