--- a/client/src/app/cart/cart.component.html
+++ b/client/src/app/cart/cart.component.html
@@ -7,33 +7,33 @@
   <title>Document</title>
 </head>
 <body>
-  <div class='row'>
-    <div *ngFor='let cart of order'>
-    <div class="col s12 m7">
-        <h2 class="header">{{ cart.salePrice }}</h2>
-        <div class="card horizontal">
-          <div class="card-image">
-            <img src="https://lorempixel.com/100/190/nature/6">
+  <div class='row background'>
+     
+    <div class="col s5 " *ngFor='let cart of order'>
+            <div class="card horizontal background">
+          <div class="card-image card-medium">
+            <img [src]=cart.url>
           </div>
           <div class="card-stacked">
             <div class="card-content">
-                <p>{{ cart.name }}</p>
+                <p  style='font-weight : bold'>{{ cart.name }}</p>
                 <p>Size : {{ cart.size }}</p>
                 <p>Color : {{ cart.color }}</p>
-                <p>Price : ${{ cart.salePrice }}</p>
+                <p style='font-weight : bold'>Price : ${{ cart.salePrice }}</p>
             </div>
             <div class="card-action">
                 Quantity : <input type="number" min="1" max="50" [value]=cart.quantity [(ngModel)]='cart.quantity'>
-                Total : <Span>{{ cart.salePrice*cart.quantity }}</Span>
+                Total : <Span  style='font-weight : bold'>{{ cart.salePrice*cart.quantity }}</Span>
             </div>
-          </div>
-        </div>
+         
+   
       </div>
       </div>
     </div>
-    <div><p>Estimated Total : </p>
+  </div>
+
       <button>Place Your Order</button>
-    </div>
+ 
 </body>
 </html>
 
