--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -5,39 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <!--Import jQuery before materialize.js-->
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-  <!--Import Google Icon Font-->
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-         <!--Import materialize.css-->
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-  
-          <link type="text/css" rel="stylesheet" href="css/main.css"  media="screen,projection"/>
-  
-          <!--Let browser know website is optimized for mobile-->
-          <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
  
 </head>
 <body>
-<!--Other element insitialisations-->
-<script type="text/javascript" language="javascript">
-    $( document ).ready(function(){
+  <script>
+      $( document ).ready(function(){
+        var slideIndex = 0;
+        carousel();
+        
+        function carousel() {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            for (i = 0; i < x.length; i++) {
+              x[i].style.display = "none"; 
+            }
+            slideIndex++;
+            if (slideIndex > x.length) {slideIndex = 1} 
+            x[slideIndex-1].style.display = "block"; 
+            setTimeout(carousel, 2000); // Change image every 2 seconds
+        }
+  });
+    </script>
 
-        $('.carousel').carousel(); //carousel init
-
-        $('.carousel.carousel-slider').carousel({full_width: true});
-    });
-
-</script>
 
 
-<div class='container'>
-  <div class='row'>
-      <div class="col s6" class="card">
+  <div class='row background style="max-width:500px"'>
+      <div class="col s4" class="card card-medium">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" (click)='shopCloths("Tommy Hilfiger")' src="assets/images/th.png">
+            <img class="activator imgSize" (click)='shopCloths("Tommy Hilfiger")' src="assets/images/th.png">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Tommy Hilfiger<i class="material-icons right">more_vert</i></span>
@@ -51,8 +49,41 @@
       </div>
 
       <div class="col s6" class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator imgSize" (click)='shopCloths("INC International Concepts")' src="assets/images/inc.png">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">INC International Concepts<i class="material-icons right">more_vert</i></span>
+          <p><a (click)='shopCloths("Tommy Hilfiger")'>Shop Here</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">INC International Concepts<i class="material-icons right">close</i></span>
+          <p>Shop Online for the Latest Collection of Women's Apparel by INC International Concepts</p>
+        </div>
+      </div>
+     
+  </div>
+  <div class='row background'>      
+
+          <div class="col s12 m6 l4" class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator imgSize" (click)='shopCloths("Lauren Ralph Lauren")' src="assets/images/rl.png">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">INC International Concepts<i class="material-icons right">more_vert</i></span>
+                <p><a (click)='shopCloths("Tommy Hilfiger")'>Shop Here</a></p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Ralph Lauren<i class="material-icons right">close</i></span>
+                <p>Ralph Lauren offers luxury men's and women's clothing, children's and baby clothes</p>
+            </div>
+ 
+        </div>
+
+
+        <div class="col s12 m6 l4" class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" (click)='shopCloths("Calvin Klein")' src="assets/images/ck.png">
+            <img class="activator" class="imgSize" (click)='shopCloths("Calvin Klein")' src="assets/images/ck.png">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Calvin Klein<i class="material-icons right">more_vert</i></span>
@@ -65,51 +96,17 @@
           </div>
       </div>
   </div>
-  <div class='row'>
 
-      <div class="col s6" class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" (click)='shopCloths("INC International Concepts")' src="assets/images/inc.png">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">INC International Concepts<i class="material-icons right">more_vert</i></span>
-            <p><a (click)='shopCloths("Tommy Hilfiger")'>Shop Here</a></p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">INC International Concepts<i class="material-icons right">close</i></span>
-            <p>Shop Online for the Latest Collection of Women's Apparel by INC International Concepts</p>
-          </div>
-        </div>
+  <h2 class="w3-center">Browsing Histrory</h2>
 
-          <div class="col s6" class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" (click)='shopCloths("Lauren Ralph Lauren")' src="assets/images/rl.png">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">INC International Concepts<i class="material-icons right">more_vert</i></span>
-                <p><a (click)='shopCloths("Tommy Hilfiger")'>Shop Here</a></p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Ralph Lauren<i class="material-icons right">close</i></span>
-                <p>Ralph Lauren offers luxury men's and women's clothing, children's and baby clothes</p>
-            </div>
- 
-        </div>
-  </div>
-  <h4>Browsing Histrory</h4>
-  <div *ngFor='let browseditem of browseItemarr'>
-      <img (click)='itemdetails(browseditem.itemId)' id='img' [src]=browseditem.largeImage>
+  <div class="w3-content w3-display-container mySlides background" style="max-width:500px" *ngFor='let browseditem of browseItemarr'>
+      <img class="mySlides" (click)='itemdetails(browseditem.itemId)' [src]=browseditem.largeImage style="width:100%">
     </div>
 
-  <div class="carousel carousel-slider">
-      <div *ngFor='let browseditem of browseItemarr ; let idx=index'>
-        <a class="carousel-item" [href]=idx><img class="carousel-item" (click)='itemdetails(browseditem.itemId)' [src]=browseditem.largeImage></a>
-      </div>
-   </div>
+ 
+     
 
 
-
-</div>
 </body>
 </html> 
 
