--- a/client/src/app/demo/demo.component.html
+++ b/client/src/app/demo/demo.component.html
@@ -8,7 +8,7 @@
   
 </head>
 <body>
-    <div class="jumbotron bg-transparent text-center">
+    <div class="jumbotron bg-transparent text-center background">
       <div *ngIf="!user" class="card text-center">
         <h6 class="card-header">
           Register With Us!
