--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -7,19 +7,14 @@
   <title>One Click Header</title>
 </head>
 <body>
-
-    <nav>
-        <div class="nav-wrapper">
-          <a href="#" class="brand-logo">   OneClick</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">         
-            <li><a href="/logout">Logout</a></li>
-          </ul>
-        </div>
-      </nav> 
+    <div class='background bg-color'>
     
+            <a style='color:white;' href="#" class="brand-logo logo">OneClick</a>            
+              <a style='color:white;'class="logout" href="/logout">Logout</a>             
+        </div>        
+     
 </body>
 </html>
-
 
 
 
@@ -35,3 +30,14 @@
           <a href="/logout">Logout</a>
         </div>
       </nav>     -->
+
+      <!-- <div class='background'>
+          <nav class='background'>
+              <div class=" background">
+                <a href="#" class="brand-logo background">   OneClick</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down background">         
+                  <li><a href="/logout">Logout</a></li>
+                </ul>
+              </div>
+            </nav> 
+          </div> -->
