--- a/client/src/app/watchlist/watchlist.component.html
+++ b/client/src/app/watchlist/watchlist.component.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <div class="row">
+  <div class="row background">
       <div *ngFor='let watchitem of watchlistArr'>
       <div class="col s12 m7">        
         <div class="card" style='display: inline-block'>
