--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,3 +1,9 @@
 #demo {
   margin-top: 56px;
 }
+
+.background{
+  background-image: url("./../assets/images/background.png");
+  background-size: cover;
+  height: auto;
+}
