--- a/client/src/app/demo/demo.component.css
+++ b/client/src/app/demo/demo.component.css
@@ -24,3 +24,9 @@ p{
   display:block;
 }
 
+.background {
+  background-image: url("./../../assets/images/background.png");
+  background-repeat: no-repeat;
+  height: 100vh;
+  background-size: cover;
+}
