--- a/client/src/app/shop-details/shop-details.component.css
+++ b/client/src/app/shop-details/shop-details.component.css
@@ -21,3 +21,67 @@ div{
 p{
     display: inline-block;
 } */
+
+/* img{
+    height: 400px;
+    width : 400px;
+ 
+} */
+/* 
+.card.small {
+  height: auto;
+}
+.card.small .card-content {
+  height: auto;
+}
+.card.small .card-action {
+  position: relative;
+} */
+
+/* / Contains group of recs / */
+.rec_wrap{
+  display:flex;
+  flex-flow: row wrap;
+  align-items: flex-end;
+  margin-right: -0.5rem;
+  padding: 0 1em;
+  vertical-align:top;
+  margin-top:0px;
+}
+/* / Contains one rec / */
+.img_squ{
+  flex: 0 1 16%;
+  margin: 0 0.5rem 0 0;
+  padding: 0 0 0.5rem 0;
+}
+@media (max-width: 1200px){
+  .img_squ{
+    flex: 0 1 24%;
+  }
+}
+/* / Placeholder image for proportions / */
+.size_setter{
+vertical-align : top;
+  width:100%;
+  opacity:0;
+}
+
+/* / Wraps round placeholder and has background of food/ */
+.rec_image{
+padding-bottom: 10px;
+  display: block;
+  background-size: cover;
+}
+#p_text{
+    padding : 0;
+    vertical-align : top;
+}
+
+.background {
+    background-image: url("./../../assets/images/background.png");
+    background-repeat: no-repeat;
+    height: auto;
+    font-weight: bold;
+    background-size: cover;
+    margin: 0px;
+  }
